--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^8.0.2",
+    "react-router-dom": "^5.3.3",
     "react-scripts": "4.0.2",
     "redux": "^4.2.0",
     "web-vitals": "^1.1.0"
